--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,118 @@
-body {
-  font-family: Arial, sans-serif;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  font-family: Arial, sans-serif;
   color: #727273;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 5%;
+  align-items: center;
+  background: #2a4641;
+}
+
+.logo {
+  color: #fff;
+  font-size: 22px;
+}
+
+.logo img {
+  width: 75px;
+}
+
+ul {
+  list-style: none;
+}
+
+ul li {
+  display: inline-block;
+}
+
+ul li a {
+  text-decoration: none;
+  color: #8291a5;
+  padding: 8px 30px;
+  border-radius: 7px;
+  transition: all 0.3s ease;
+}
+
+ul li a:hover,
+ul li a.active {
+  color: #fff;
+  background: #a0c9b7;
+}
+
+#icon {
+  background-color: #a0c9b7;
+  padding: 5px 7px 3px 7px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+#icon svg {
+  color: #fff;
+  height: 28px;
+  transition: all 0.3s ease;
+}
+
+#icon:hover {
+  background: #fff;
+}
+
+#icon:hover svg {
+  color: #a0c9b7;
+}
+
+#checkbox,
+#icon {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  nav {
+    border-bottom: 1px solid #455468;
+  }
+
+  ul {
+    position: absolute;
+    width: 100%;
+    height: calc(100vh - 71px);
+    background-color: #2a4641;
+    left: 0;
+    top: 0;
+    text-align: center;
+    display: none;
+    margin-top: 91px;
+  }
+
+  ul li {
+    display: block;
+    padding: 10px 15px;
+  }
+
+  ul li a {
+    display: block;
+    padding: 10px 0;
+  }
+
+  #icon {
+    display: block;
+  }
+
+  #checkbox:checked ~ ul {
+    display: block;
+  }
+}
+
+/*
 .principal {
   display: flex;
   align-items: center;
@@ -76,6 +184,7 @@ body {
   animation: efecto 1.2s infinite;
   display: inline-block;
 }
+*/
 
 .main-content {
   background-image: url("../img/fondoBody2.jpg");
@@ -151,5 +260,5 @@ footer {
   }
 @media screen and (min-width: 1200px) {
  
-}
- */
+  }
+*/
