--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,8 @@ body {
   height: 100vh;
   font-family: Arial, sans-serif;
   color: #727273;
-  background-image: url("../img/fondoBody2.jpg");
+  background: url("../img/fondoBody2.jpg") no-repeat;
   background-size: cover;
-  background-repeat: no-repeat;
   /* Opcional:  Ajustes adicionales para el texto si es necesario */
   /* color: white;  */
   /* font-size: 16px; */
@@ -25,7 +24,7 @@ nav {
 }
 
 .logo {
-  color: #fff;
+  color: #727273;
   font-size: 22px;
 }
 
@@ -87,11 +86,55 @@ ul li a.active {
 .main-content {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: left;
+
   min-height: calc(100vh - 175px);
   margin: 10px;
   padding: 10px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-group {
+  margin-bottom: 10px; /* Espacio entre los campos */
+}
+
+label {
+  display: block;
+  margin-bottom: 5px; /* Espacio entre etiqueta y campo */
+}
+input[type="text"],
+input[type="email"],
+textarea {
+  position: relative;
+  width: 500px;
+  height: 40px;
+  background: transparent;
+  border: 2px solid rgba(114, 114, 115, 1);
+  backdrop-filter: blur(20px);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 1.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #727273;
+  border-radius: 20px;
+  padding: 30px 40px;
+}
+
+button {
+  width: 30%;
+  background-color: #2a4641; /* Color de fondo del botón */
+  color: #727273; /* Color del texto del botón */
+  padding: 10px 20px; /* Espacio interno del botón */
+  border: 2px solid rgba(114, 114, 115, 1); /* borde del botón */
+  border-radius: 20px; /* Esquinas redondeadas */
+  cursor: pointer; /* Cambiar cursor al pasar el ratón */
+}
+button:hover {
+  background-color: #a0c9b7; /* Color de fondo al pasar el ratón */
 }
 
 footer {
@@ -166,7 +209,7 @@ footer a:hover {
 
 @media screen and (max-width: 768px) {
   nav {
-    border-bottom: 1px solid #455468;
+    border-bottom: 1px solid #727273;
   }
 
   ul {
@@ -243,16 +286,6 @@ footer a:hover {
     color: #fff;
     background: #a0c9b7;
   }
-
-  /*.main-content {
-    background-image: url("../img/fondoBody2.jpg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    min-height: calc(100vh - 175px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }*/
 
   footer {
     display: flex;
