--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -10,77 +12,6 @@ body {
   color: #727273;
   background: url("../img/fondoBody2.jpg") no-repeat;
   background-size: cover;
-  /* Opcional:  Ajustes adicionales para el texto si es necesario */
-  /* color: white;  */
-  /* font-size: 16px; */
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  padding: 15px 5%;
-  align-items: center;
-  background: #2a4641;
-}
-
-.logo {
-  color: #727273;
-  font-size: 22px;
-}
-
-.logo img {
-  width: 50px;
-}
-
-ul {
-  list-style: none;
-}
-
-ul li {
-  display: inline-block;
-}
-
-ul li a {
-  text-decoration: none;
-  color: #8291a5;
-  font-size: 20px;
-  font-weight: bold;
-  padding: 8px 30px;
-  border-radius: 7px;
-  transition: all 0.3s ease;
-}
-
-ul li a:hover,
-ul li a.active {
-  color: #fff;
-  background: #a0c9b7;
-}
-
-#icon {
-  background-color: #a0c9b7;
-  padding: 5px 7px 3px 7px;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-#icon svg {
-  color: #fff;
-  height: 28px;
-  transition: all 0.3s ease;
-}
-
-#icon:hover {
-  background: #fff;
-}
-
-#icon:hover svg {
-  color: #a0c9b7;
-}
-
-#checkbox,
-#icon {
-  display: none;
 }
 
 main {
@@ -89,235 +20,25 @@ main {
   padding: 10px;
 }
 
-.pedidos-wrapper-center {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 70vh;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.form-group {
-  margin-bottom: 10px; /* Espacio entre los campos */
-}
-
-label {
-  display: block;
-  margin-bottom: 5px; /* Espacio entre etiqueta y campo */
-}
-input[type="text"],
-input[type="email"],
-textarea {
-  position: relative;
-  width: 500px;
-  height: 40px;
-  background: transparent;
-  border: 2px solid rgba(114, 114, 115, 1);
-  backdrop-filter: blur(20px);
-  box-shadow: 0 0 30px rgba(0, 0, 0, 1.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #727273;
-  border-radius: 20px;
-  padding: 30px 40px;
-}
-
-button {
-  width: 30%;
-  background-color: #2a4641; /* Color de fondo del botón */
-  color: #727273; /* Color del texto del botón */
-  padding: 10px 20px; /* Espacio interno del botón */
-  border: 2px solid rgba(114, 114, 115, 1); /* borde del botón */
-  border-radius: 20px; /* Esquinas redondeadas */
-  cursor: pointer; /* Cambiar cursor al pasar el ratón */
-}
-button:hover {
-  background-color: #a0c9b7; /* Color de fondo al pasar el ratón */
-}
-
-footer {
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  margin: 10px;
-  padding: 10px;
-  color: #727273;
-}
-
-footer a {
-  text-decoration: none;
-  color: #8291a5;
-  padding: 8px 30px;
-  border-radius: 7px;
-  transition: all 0.3s ease;
-}
-
-footer a:hover {
-  color: #fff;
-  background: #a0c9b7;
-}
-
-.whatsapp-button {
-  font-size: 15px;
-  color: #128c39;
-  bottom: 15px;
-  right: 15px;
-  padding: 15px;
-  position: fixed;
-  text-decoration: none;
-  transition: ease 1s;
-  z-index: 1000;
-}
-
-.whatsapp-button .whatsapp-chat-text {
-  font-size: 1em;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.whatsapp-button .fa-whatsapp {
-  color: #0df053;
-  font-size: 75px;
-  border-radius: 50%;
-  animation: efecto 1.2s infinite;
-}
-
-.whatsapp-button .fa-whatsapp:hover {
-  background-color: #0df053;
-  color: white;
-  border-radius: 50%;
-  transition: ease 0.5s;
-  transform: scale(1.1);
-  right: 25px;
-  padding: 10px;
-  z-index: 999;
-  animation: efecto 1.2s infinite;
-}
-
-.wrapper {
-  position: relative;
-  width: 420px;
-  height: 440px;
-  background: transparent;
-  border: 2px solid rgba(114, 114, 115, 1);
-  backdrop-filter: blur(20px);
-  box-shadow: 0 0 30px rgba(0, 0, 0, 1.5);
-  font-family: "Poppins", sans-serif;
-  color: #727273;
-  border-radius: 20px;
-  padding: 30px 40px;
-}
-
-.wrapper h1 {
-  font-size: 36px;
-  text-align: center;
-}
-
-.wrapper .input-box {
-  position: relative;
-  width: 100%;
-  height: 50px;
-  margin: 30px 0;
-}
-
-.input-box input {
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  border: none;
-  outline: none;
-  border: 2px solid rgba(114, 114, 115, 1);
-  border-radius: 40px;
-  font-size: 16px;
-  color: #727273;
-  padding: 20px 45px 20px 20px;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 1.5);
-}
-
-.input-box input::placeholder {
-  color: #727273;
-}
-
-.input-box i {
-  position: absolute;
-  right: 20px;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 20px;
-}
-
-.wrapper .remember-forgot {
-  display: flex;
-  justify-content: space-between;
-  font-size: 14.5px;
-  margin: -15px 0 15px;
-}
-
-.remember-forgot label input {
-  accent-color: #727273;
-  margin: 3px;
-}
-
-.remember-forgot a:hover {
-  text-decoration: underline;
-}
-
-.wrapper .btn {
-  width: 100%;
-  height: 45px;
-  background: transparent;
-  border: none;
-  outline: none;
-  border: 2px solid rgba(114, 114, 115, 1);
-  border-radius: 40px;
-  box-shadow: 0 0 30px rgb(0, 0, 30, 1.5);
-  cursor: pointer;
-  font-size: 16px;
-  color: #727273;
-  font-weight: 600;
-}
-
-.wrapper .register-link {
-  font-size: 14.5px;
-  text-align: center;
-  margin: 20px 0 15px;
-}
-
-.register-link p a {
-  color: #727273;
-  text-decoration: none;
-  font-weight: 600;
-}
-
-.register-link p a:hover {
-  text-decoration: underline;
-}
-
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
-
-@keyframes efecto {
-  0% {
-    box-shadow: 0 0 0 0 rgb(0, 0, 0, 1.5);
-  }
-  100% {
-    box-shadow: 0 0 0 15px rgb(0, 0, 0, 0);
-  }
-}
-
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 0px) {
   nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 5%;
+    align-items: center;
+    background: #2a4641;
     border-bottom: 1px solid #727273;
     position: relative;
     z-index: 1001;
+  }
+
+  .logo {
+    color: #727273;
+    font-size: 22px;
+  }
+
+  .logo img {
+    width: 50px;
   }
 
   ul {
@@ -340,58 +61,11 @@ footer a:hover {
 
   ul li a {
     display: block;
-    padding: 10px 0;
-    font-weight: bold;
-    font-size: 2em;
-  }
-
-  #icon {
-    display: block;
-    z-index: 1003;
-    position: relative;
-  }
-
-  #checkbox:checked ~ ul {
-    display: block;
-  }
-
-  main {
-    padding-top: 100px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 15px 5%;
-    align-items: center;
-    background: #2a4641;
-  }
-
-  .logo {
-    color: #727273;
-    font-size: 22px;
-  }
-
-  .logo img {
-    width: 50px;
-  }
-
-  ul {
-    list-style: none;
-  }
-
-  ul li {
-    display: inline-block;
-  }
-
-  ul li a {
     text-decoration: none;
     color: #8291a5;
-    font-size: 20px;
+    font-size: 2em;
     font-weight: bold;
-    padding: 8px 30px;
+    padding: 10px 30px;
     border-radius: 7px;
     transition: all 0.3s ease;
   }
@@ -402,26 +76,41 @@ footer a:hover {
     background: #a0c9b7;
   }
 
-  footer {
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    margin: 10px;
-    padding: 10px;
-    color: #727273;
+  #icon {
+    background-color: #a0c9b7;
+    padding: 5px 7px 3px 7px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: block;
+    z-index: 1003;
+    position: relative;
   }
 
-  footer a {
-    text-decoration: none;
-    color: #8291a5;
-    padding: 8px 30px;
-    border-radius: 7px;
+  #icon svg {
+    color: #fff;
+    height: 28px;
     transition: all 0.3s ease;
   }
 
-  footer a:hover {
-    color: #fff;
-    background: #a0c9b7;
+  #icon:hover {
+    background: #fff;
+  }
+
+  #icon:hover svg {
+    color: #a0c9b7;
+  }
+
+  #checkbox {
+    display: none;
+  }
+
+  #checkbox:checked ~ ul {
+    display: block;
+  }
+
+  main {
+    padding-top: 100px;
   }
 
   .whatsapp-button {
@@ -463,6 +152,182 @@ footer a:hover {
     animation: efecto 1.2s infinite;
   }
 
+  .pedidos-wrapper-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 70vh;
+  }
+
+  .form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .form-group {
+    margin-bottom: 10px;
+  }
+
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    position: relative;
+    width: 500px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid rgba(114, 114, 115, 1);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 1.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #727273;
+    border-radius: 20px;
+    padding: 30px 40px;
+  }
+
+  button {
+    width: 30%;
+    background-color: #2a4641;
+    color: #727273;
+    padding: 10px 20px;
+    border: 2px solid rgba(114, 114, 115, 1);
+    border-radius: 20px;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: #a0c9b7;
+  }
+
+  footer {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin: 10px;
+    padding: 10px;
+    color: #727273;
+  }
+
+  footer a {
+    text-decoration: none;
+    color: #8291a5;
+    padding: 8px 30px;
+    border-radius: 7px;
+    transition: all 0.3s ease;
+  }
+
+  footer a:hover {
+    color: #fff;
+    background: #a0c9b7;
+  }
+
+  .wrapper {
+    position: relative;
+    width: 420px;
+    height: 440px;
+    background: transparent;
+    border: 2px solid rgba(114, 114, 115, 1);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 1.5);
+    font-family: "Poppins", sans-serif;
+    color: #727273;
+    border-radius: 20px;
+    padding: 30px 40px;
+  }
+
+  .wrapper h1 {
+    font-size: 36px;
+    text-align: center;
+  }
+
+  .wrapper .input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0;
+  }
+
+  .input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(114, 114, 115, 1);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #727273;
+    padding: 20px 45px 20px 20px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 1.5);
+  }
+
+  .input-box input::placeholder {
+    color: #727273;
+  }
+
+  .input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+  }
+
+  .wrapper .remember-forgot {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+  }
+
+  .remember-forgot label input {
+    accent-color: #727273;
+    margin: 3px;
+  }
+
+  .remember-forgot a:hover {
+    text-decoration: underline;
+  }
+
+  .wrapper .btn {
+    width: 100%;
+    height: 45px;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(114, 114, 115, 1);
+    border-radius: 40px;
+    box-shadow: 0 0 30px rgb(0, 0, 30, 1.5);
+    cursor: pointer;
+    font-size: 16px;
+    color: #727273;
+    font-weight: 600;
+  }
+
+  .wrapper .register-link {
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px;
+  }
+
+  .register-link p a {
+    color: #727273;
+    text-decoration: none;
+    font-weight: 600;
+  }
+
+  .register-link p a:hover {
+    text-decoration: underline;
+  }
+
   @keyframes efecto {
     0% {
       box-shadow: 0 0 0 0 rgb(0, 0, 0, 1.5);
@@ -471,4 +336,66 @@ footer a:hover {
       box-shadow: 0 0 0 15px rgb(0, 0, 0, 0);
     }
   }
+}
+
+@media screen and (min-width: 768px) {
+  nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 5%;
+    align-items: center;
+    background: #2a4641;
+  }
+
+  .logo {
+    color: #727273;
+    font-size: 22px;
+  }
+
+  .logo img {
+    width: 50px;
+  }
+
+  ul {
+    list-style: none;
+    display: flex;
+    position: static;
+    width: auto;
+    height: auto;
+    margin-top: 0;
+  }
+
+  ul li {
+    display: inline-block;
+  }
+
+  ul li a {
+    text-decoration: none;
+    color: #8291a5;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 8px 30px;
+    border-radius: 7px;
+    transition: all 0.3s ease;
+  }
+
+  ul li a:hover,
+  ul li a.active {
+    color: #fff;
+    background: #a0c9b7;
+  }
+
+  #icon {
+    display: none;
+  }
+
+  #checkbox {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 992px) {
+}
+
+@media screen and (min-width: 1200px) {
 }
