--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   height: 100vh;
   font-family: Arial, sans-serif;
   color: #727273;
-  background: url("/img/fondoBody2.jpg") no-repeat;
+  background: url("../img/fondoBody2.jpg") no-repeat;
   background-size: cover;
 }
 
